# qcapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.yml  manage.py  pyproject.toml  render.yaml  requirements.txt
qcapp/: asgi.py  settings.py  urls.py  wsgi.py
qcapp/static/qcapp/: qcapp.pptx
ratings/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ratings/static/ratings/: style.css
ratings/templates/: base.html  click.html  click_canvas.html  form.html  index.html  main.html  rate_image.html
