[project]
name = "qcapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connectorx>=0.4.2",
    "daphne>=4.1.2",
    "django>=5.1.6",
    "django-qcapp-ratings",
    "twisted[http2,tls]>=24.11.0",
]

[project.scripts]
manage = "qcapp.manage:main"

[dependency-groups]
dev = ["codespell>=2.4.1", "pre-commit>=4.2.0", "pywatchman>=3.0.0"]

[tool.uv.sources]
django-qcapp-ratings = { path = "../django-qcapp-ratings", editable = true }

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
